--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -14,7 +14,7 @@ a {
   color: #505050;
 }
 body {
-  max-width: 1079px;
+  // max-width: 1079px;
   margin: 0 auto;
 }
 li {
@@ -30,13 +30,15 @@ h3 {
 }
 .pc {
   display: block;
+  @media screen and (max-width: 670px) {
+    display: none;
+  }
 }
 .sp {
   display: none;
-}
-.full-size {
-  width: 100vw;
-  margin: 0 calc(50% - 50vw);
+  @media screen and (max-width: 670px) {
+    display: block;
+  }
 }
 h1 {
   position: relative;
@@ -56,6 +58,9 @@ h1 {
     height: 2px;
     transform: translateX(-50%);
     background-color: #000;
+    @media screen and (max-width: 375px) {
+      bottom: -12.5px;
+    }
   }
 }
 // common
@@ -65,6 +70,7 @@ h1 {
 .wrapper {
   padding: 0 60px;
   margin: 0 auto;
+  max-width: 1080px;
   @media screen and (max-width: 960px) {
     padding: 0 20%;
   }
@@ -74,16 +80,17 @@ h1 {
   @media screen and (max-width: 600px) {
     padding: 0 10%;
   }
+  @media screen and (max-width: 375px) {
+    padding: 0 30px;
+  }
 }
 .header-wrapper {
   padding: 0 65px 0 60px;
-}
-.contents-wrapper {
-  padding: 0 60px;
-  max-width: 1079px;
+  max-width: 1080px;
   margin: 0 auto;
-  @media screen and(max-width:960px) {
-    padding: 0 5%;
+  @media screen and (max-width: 375px) {
+    padding: 0 181px 0 20px;
+    letter-spacing: 0.1px;
   }
 }
 .btn {
@@ -101,11 +108,6 @@ h1 {
 .txt-left {
   text-align: left;
 }
-.flex-column {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
 // header
 header {
   display: flex;
@@ -120,6 +122,9 @@ header {
     max-width: 100%;
     height: 20px;
     line-height: 20px;
+    @media screen and(max-width:375px) {
+      margin: 17px 0 13px;
+    }
   }
   nav {
     ul {
@@ -159,6 +164,18 @@ header {
     white-space: nowrap;
     line-height: 1.7;
   }
+  @media screen and (max-width: 375px) {
+    background: url(../images/SP/FV-sp.png);
+    background: image-set(
+      url(../images/SP/FV-sp.png) 1x,
+      url(../images/SP/FV-sp@2x.png) 2x
+    );
+    height: 550px;
+    p {
+      top: 36px;
+      font-size: 35px;
+    }
+  }
 }
 // menu
 #menu {
@@ -172,22 +189,22 @@ header {
     justify-items: center;
     align-items: center;
     margin: 0 auto;
-    padding-bottom: 53px;
+    padding-bottom: 47px;
     @media screen and (max-width: 960px) {
       flex-direction: column;
       align-items: center;
       padding-bottom: 48px;
     }
     .menu-item {
+      max-width: 300px;
+      width: 100%;
       @media screen and (max-width: 960px) {
+        max-width: none;
         width: 100%;
-        max-width: 400px;
         &:not(:first-of-type) {
           margin-top: 33px;
         }
       }
-      max-width: 300px;
-      width: 100%;
       h2 {
         font-size: 20px;
         font-weight: 400;
@@ -198,12 +215,34 @@ header {
         font-weight: 200;
         font-size: 15px;
         width: 100%;
-        margin: 0 auto;
-        text-align: center;
         line-height: 1.6;
+        margin-top: 5px;
       }
       img {
         width: 100%;
+      }
+    }
+  }
+  @media screen and(max-width:375px) {
+    h1 {
+      margin: 46.5px 0 40px;
+    }
+    .menu-contents {
+      row-gap: 28px;
+      .menu-item {
+        width: 100%;
+        max-width: 315px;
+        h2 {
+          margin-top: 16px;
+        }
+        p {
+          margin-top: 4px;
+          line-height: 1.7;
+          margin-bottom: 0;
+        }
+        &:not(:first-of-type) {
+          margin-top: 0px;
+        }
       }
     }
   }
@@ -225,6 +264,7 @@ header {
       width: 471px;
       max-width: 100%;
       h2 {
+        margin-top: 15.5px;
         font-size: 22px;
         font-weight: 400;
         span {
@@ -232,13 +272,17 @@ header {
         }
       }
       p {
+        margin-top: 23px;
         font-size: 18px;
         font-weight: 200;
         color: #505050;
-        line-height: 1.7;
+        line-height: 1.8;
         span {
           display: block;
         }
+      }
+      button {
+        margin-top: 28px;
       }
     }
     .about-item-img {
@@ -247,24 +291,7 @@ header {
       }
     }
   }
-}
-// footer
-footer {
-  background-color: #505050;
-  height: 92px;
-  color: #fff;
-  p {
-    text-align: center;
-    font-weight: 200;
-    line-height: 85px;
-    font-size: 20px;
-  }
-}
-@media screen and (max-width: 960px) {
-  .pc {
-    display: block;
-  }
-  #about {
+  @media screen and(max-width: 960px) {
     .about-contents {
       flex-direction: column;
       align-items: center;
@@ -277,88 +304,21 @@ footer {
           margin-top: 20px;
         }
         p {
-          margin-top: 38px;
+          margin-top: 20px;
         }
         .btn {
-          margin-top: 27px;
+          margin-top: 30px;
           width: 100%;
         }
       }
     }
   }
-}
-
-@media screen and (max-width: 670px) {
-  // common
-  html {
-    min-width: 375px;
-  }
-  .pc {
-    display: none;
-  }
-  .sp {
-    display: block;
-  }
-}
-@media screen and (max-width: 375px) {
-  // common
-  .header-wrapper {
-    padding: 0 181px 0 20px;
-  }
-  .contents-wrapper {
-    padding: 0 30px;
-  }
-  h1 {
-    &::before {
-      bottom: -12.5px;
-    }
-  }
-  // header
-  header {
-    #header-title {
-      margin: 17px 0 13px;
-    }
-  }
-  // top
-  #top {
-    background: url(../images/SP/FV-sp.png);
-    background: image-set(
-      url(../images/SP/FV-sp.png) 1x,
-      url(../images/SP/FV-sp@2x.png) 2x
-    );
-    height: 550px;
-    p {
-      top: 38px;
-    }
-  }
-  #menu {
-    h1 {
-      margin: 46.5px 0 40px;
-    }
-    .menu-contents {
-      row-gap: 33px;
-      .menu-item {
-        width: 100%;
-        max-width: 315px;
-        h2 {
-          margin-top: 15px;
-        }
-        p {
-          line-height: 1.7;
-          margin-bottom: 0;
-        }
-        &:not(:first-of-type) {
-          margin-top: 0px;
-        }
-      }
-    }
-  }
-  #about {
+  @media screen and(max-width: 375px) {
     height: 100%;
     margin: 0 auto;
     padding-bottom: 50px;
     h1 {
-      margin-top: 42.5px;
+      margin-top: 38.5px;
     }
     .about-contents {
       .about-item-text {
@@ -379,12 +339,25 @@ footer {
       }
     }
   }
-  footer {
-    p {
+}
+// footer
+footer {
+  background-color: #505050;
+  height: 92px;
+  color: #fff;
+  p {
+    text-align: center;
+    font-weight: 200;
+    font-size: 20px;
+    padding-top: 30px;
+    padding-bottom: 39px;
+    line-height: 1.25;
+    letter-spacing: 0.2px;
+    @media screen and (max-width: 375px) {
       font-size: 17px;
       line-height: 1.9;
-      padding-top: 27px;
-      letter-spacing: 0.5px;
+      padding-top: 26px;
+      letter-spacing: 0.3px;
     }
   }
 }
